# BookReviews

./: .flaskenv  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
BookReviewsApi/: __init__.py  author.py  books.py  data.json  db_conn.py  models.py  reviews.py
tests/: conftest.py  seeds.py  test_api.py  test_books.py  test_models.py  test_reviews.py
